--- a/FourTeam/app/src/main/res/layout/activity_xiang_qing.xml
+++ b/FourTeam/app/src/main/res/layout/activity_xiang_qing.xml
@@ -1,9 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:background="@mipmap/my_bg_colorful"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="fourteam.cck.com.fourteam.activity.XiangQingActivity">
+    android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <RelativeLayout
+        android:layout_marginTop="30dp"
+        android:background="#b7b21a"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/back"
+            android:layout_width="25dp"
+            android:layout_height="25dp" />
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:text="加载中..."
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <ImageView
+            android:layout_marginRight="10dp"
+            android:layout_alignParentRight="true"
+            android:src="@mipmap/collection"
+            android:layout_centerVertical="true"
+            android:layout_width="25dp"
+            android:layout_height="25dp" />
+    </RelativeLayout>
+
+    <tv.danmaku.ijk.media.widget.media.IjkVideoView
+        android:id="@+id/ivv"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"/>
+
+    <com.astuetz.PagerSlidingTabStrip
+        android:layout_gravity="center"
+        android:id="@+id/tabs"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
+
+</LinearLayout>
