--- a/FourTeam/app/src/main/res/layout/jianjie_fragment.xml
+++ b/FourTeam/app/src/main/res/layout/jianjie_fragment.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,11 +16,13 @@
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="导演:"
             android:layout_marginTop="15dp" />
 
         <TextView
             android:textColor="#fff"
-            android:id="@+id/name2"
+            android:id="@+id/names"
+            android:text="主演:"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp" />
@@ -41,7 +45,6 @@
             android:textColor="#fff"
             android:textSize="16sp" />
     </LinearLayout>
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/grid_rv"
         android:layout_width="match_parent"
